[package]
name = "via"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A private mesh control plane for machines you own."

[dependencies]
anyhow = "1"
aes-gcm = "0.10"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dirs = "5"
getrandom = "0.2"
hmac = "0.12"
iroh = "0.98.2"
lux = { git = "https://github.com/lux-db/lux.git", tag = "v0.13.2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
