[package]
name = "via"
version = "0.2.0-rc.1"
edition = "2021"
license = "MIT"
description = "A private mesh control plane for machines you own."

[dependencies]
anyhow = "1"
aes-gcm = "0.10"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dirs = "5"
ring = "0.17.14"
futures-util = "0.3"
getrandom = "0.2"
hmac = "0.12"
lux = { git = "https://github.com/lux-db/lux.git", tag = "v0.13.2" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
